# stereo

./: .gitignore  .treefmt.toml  README.md  eslint.config.js  index.html  justfile  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  AppearanceSwitch.tsx  CollectionSelector.tsx  EditDialog.tsx  ExportDropDown.tsx  Grid.tsx  ImportDialog.tsx  Keyboard.tsx  Notification.tsx  Rating.tsx  SearchBox.tsx  Title.tsx  Types.tsx  Utils.tsx  WebSocket.tsx  YT.tsx  index.css  logger.tsx  main.tsx
src/stereo/: __init__.py  _logging.py  cli.py  db.py  lib.py  message.py  server.py  utils.py
src/stereo/statics/: index.html
src/stereo/statics/assets/: index-7emu8jq2.js  index-B-3ZDlKY.css  index-B0eFP6xl.css  index-BAd0Yj9y.js  index-BGGsq0Wn.js  index-BM3TfFG9.js  index-BNR291nT.css  index-BUVUjRA_.css  index-BXvQNugR.js  index-B_ojVFpH.js  index-BbO7O15I.css  index-Bofg-bbK.css  index-BqAzDCcA.js  index-CAcF4jJS.css  index-CBPNCWRu.js  index-CCvP5QLb.js  index-CD578nYV.js  index-CEQj3eL4.css  index-CHEqZDTy.js  index-CJsYEqWZ.js  index-C_TMTQtN.js  index-ChnwSPmf.css  index-ClTVVyPk.css  index-D2GUqlfu.js  index-DA4kJKJX.js  index-DAK34Nva.js  index-DHGHzXQg.css  index-DcBhq_o4.css  index-DiIW3n1p.js  index-DjdOeBz6.js  index-DkcsbSu5.css  index-DzPZattN.js  index-DzR-mBoA.js  index-I8L1WiG6.js  index-WVGRsvHL.js  index-XB2-SMLW.js  index-Y8kKZaFA.js  index-irRm45ma.js  index-j2xtD9va.js  index-oR9_VsoH.js
src/test/: test_search.py
