[project]
name = "stereo"
dynamic = ["version"]
description = "A browser-based music curation and streaming app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.13.2",
  "pyyaml>=6.0.3",
  "spotipy>=2.25.2",
  "rich>=14.2.0,<15",
  "beautifulsoup4>=4.14.3,<5",
  "levenshtein>=0.27.3,<0.28",
  "pydantic>=2.12.5,<3",
  "uvicorn>=0.38.0",
  "websockets>=15.0.1",
  "pydantic-settings>=2.12.0",
  "starlette>=0.50.0",
  "aiosqlite>=0.22.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "thefuzz>=0.22.1",
  "pip-licenses>=5.5.0",
]

[project.scripts]
stereo = "stereo:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/stereo/_version.py"

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
stereo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
deno = ">=2.3.4,<2.4"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
